# finally

./: readme.md
api/: pyproject.toml
api/accounts/: models.py  serializers.py  tests.py  views.py
api/accounts/migrations/: 0001_initial.py  0002_initial.py
api/config/: settings.py  urls.py
api/transactions/: models.py  serializers.py  tests.py  views.py
api/transactions/migrations/: 0001_initial.py  0002_initial.py
api/users/: models.py  tests.py  views.py
api/users/migrations/: 0001_initial.py
app/: package-lock.json  package.json
app/app/: client.ts  types.d.ts
app/app/components/: AuthForm.tsx  Layout.tsx  Transactions.tsx
app/pages/: accounts.tsx  index.tsx  login.tsx  register.tsx
app/pages/transactions/: [accountId].tsx  index.tsx
